cambios  segun categorias
cambios

--- a/src/app/cabecera/cabecera.component.html
+++ b/src/app/cabecera/cabecera.component.html
@@ -3,11 +3,8 @@
         <img  src="assets/logo.png" alt="">
     </div>
 	<div class="titulo">
-
+		El titulo de su web
 	</div>
-		<button class="botonCabecera" [routerLink]="['/pedidos']" >
-			<i class="fa fa-shopping-cart" aria-hidden="true"></i>
-		</button>
 		<button class="botonCabecera" [routerLink]="['/login']">
 				<i class="fa fa-user-circle" style="color: gainsboro;" aria-hidden="true"></i>
 		</button>
