--- a/src/app/cabecera/cabecera.component.scss
+++ b/src/app/cabecera/cabecera.component.scss
@@ -21,6 +21,10 @@
     .titulo{
         border: solid 1px $color-gris;
         width: 50%;
+        text-align: center;
+        font-size: 2rem;
+        margin:auto;
+        padding: 2%;
     }
       
     .botonCabecera{
