--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,101 +1,94 @@
 <div class="conteinerHome">
   <div class="parte1">
-    <p><i class="fa fa-circle" style="margin-top: 10%;" aria-hidden="true"></i>
-      jnddk mox z</p>
     <div class="introduccion">
-      <h1><span> Pag Web</span></h1>
+      <div class="tituloPrincipal">Su pagina Web</div>
       <h2 class="word-break">Estas viendo un ejemplo<br></h2>
     </div>  
   </div>
-
-  <div class="container">
-    <div class="t light">
-      <div class="_header">
-        <h1 class = "header_title">Autoadministrable</h1>
-        <p class="header_copy"> Ventajas</p>
-      </div>
-      <div class="_plan">
-        <div class="cl_plan">
-          <div class="cl_copy">CRECIMIENTO EXPONENCIAL</div>
-          <div class="cl_add">
-            <i class="fa fa-circle fa-2x" style="color: rgb(247, 247, 80);" aria-hidden="true"></i>
+  <div class="row">
+    <div class="container">
+      <div class="t light" style="padding:0px; border-top-left-radius: 25px; width: 100%;">
+        <div class="_header">
+          <h1 class = "header_title">Autoadministrable</h1>
+          <p class="header_copy"> Ventajas</p>
+        </div>
+        <div class="_plan">
+          <div class="cl_plan">
+            <div class="cl_copy">Crecimiento exponencial</div>
+            <div class="cl_add">
+              <i class="fa fa-circle fa-2x" style="color: rgb(247, 247, 80);" aria-hidden="true"></i>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="_events">
-        <p class="ce_title">La web crece como tu negocio</p>
-        <p class="ce_title">Algo que la destaca!</p>
-
-        <div class="event_item">
-          <div class="ei_Dot dot_active"></div>
-          <div class="ei_Title">Atencion Personalizada</div>
-          <div class="ei_Copy">Ofrecemos otros servicios: 
-            <br>
-            como diseño y asesoramiento
-            <br>
-            en posicionamiento de mercado.
+        <div class="_events">
+          <p class="ce_title">La web crece como tu negocio</p>
+          <p class="ce_title">Algo que la destaca!</p>
+  
+          <div class="event_item">
+            <div class="ei_Dot dot_active"></div>
+            <div class="ei_Title">Atencion Personalizada</div>
+            <div class="ei_Copy">Ofrecemos otros servicios: 
+              <br>
+              Diseño y asesoramiento
+              <br>
+              Posicionamiento de mercado.
+            </div>
           </div>
-        </div>
-
-        <div class="event_item">
-          <div class="ei_Dot dot_active"></div>
-          <div class="ei_Title">Easy designe</div>
-          <div class="ei_Copy">Podes descargar tus productos
-            <br>
-            con un disenio modesto listo y elegante
-            <br>
-            para publicar en tus redes.
+  
+          <div class="event_item">
+            <div class="ei_Dot dot_active"></div>
+            <div class="ei_Title">Easy designe</div>
+            <div class="ei_Copy">Podes descargar tus productos
+              <br>
+              con un disenio modesto listo y elegante
+              <br>
+              para publicar en tus redes.
+            </div>
           </div>
-        </div>
-
-        <div class="event_item">
-          <div class="ei_Dot dot_active"></div>
-          <div class="ei_Title">Easy designe Email</div>
-          <div class="ei_Copy">En desarrollo. 
+  
+          <div class="event_item">
+            <div class="ei_Dot dot_active"></div>
+            <div class="ei_Title">Easy designe Email</div>
+            <div class="ei_Copy">En desarrollo. 
+            </div>
           </div>
+  
+          <div class="event_item">
+            <div class="ei_Dot dot_active"></div>
+            <div class="ei_Title">Tecnologia:</div>
+            <div class="ei_Copy">de futuro estable.</div>
+          </div>
+          <div class="event_item">
+            <div class="ei_Dot"></div>
+            <div class="ei_Title">Funcionalidades:</div>
+            <div class="ei_Copy">Se pueden agregar</div>
+          </div>
+          <div class="event_item">
+            <div class="ei_Dot"></div>
+            <div class="ei_Title">Disenio:</div>
+            <div class="ei_Copy">Se puede pactar</div>
+          </div>
+          <div class="event_item">
+            <div class="ei_Dot"></div>
+            <div class="ei_Title">Otros Sistemas</div>
+            <div class="ei_Copy">Pueden intervenir segun la tecnologia</div>
+          </div>
+          <div class="event_item">
+            <div class="ei_Dot"></div>
+            <div class="ei_Title">Accesible</div>
+            <div class="ei_Copy">Economica</div>
+          </div>
+  
+          <div class="event_item">
+            <div class="ei_Dot dot_active"></div>
+            <div class="ei_Title">Codigo propio:</div>
+            <div class="ei_Copy">Sin plantillas</div>
+          </div>
+          
         </div>
-
-        <div class="event_item">
-          <div class="ei_Dot dot_active"></div>
-          <div class="ei_Title">Tecnologia:</div>
-          <div class="ei_Copy">de futuro estable.</div>
-        </div>
-        <div class="event_item">
-          <div class="ei_Dot"></div>
-          <div class="ei_Title">Funcionalidades:</div>
-          <div class="ei_Copy">Se pueden agregar</div>
-        </div>
-        <div class="event_item">
-          <div class="ei_Dot"></div>
-          <div class="ei_Title">Disenio:</div>
-          <div class="ei_Copy">Se puede pactar</div>
-        </div>
-        <div class="event_item">
-          <div class="ei_Dot"></div>
-          <div class="ei_Title">Otros Sistemas</div>
-          <div class="ei_Copy">Pueden intervenir segun la tecnologia</div>
-        </div>
-        <div class="event_item">
-          <div class="ei_Dot"></div>
-          <div class="ei_Title">Accesible</div>
-          <div class="ei_Copy">Economica</div>
-        </div>
-
-        <div class="event_item">
-          <div class="ei_Dot dot_active"></div>
-          <div class="ei_Title">Codigo propio:</div>
-          <div class="ei_Copy">Sin plantillas</div>
-        </div>
-        
       </div>
     </div>
   </div>
+
     
-
-
-
-
-
-
-
 </div>
