--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,39 +1,59 @@
-<div class="nav">
+<div class="navPedidos-productos">
     <hr>
     <div class="scrollmenu">
         <a routerLink="/home">Home</a>
         <a href="">Nosotros</a>
         <a href="">Otra Seccion</a>
         <a 
-        routerLink="/list-card"
         (click)="mostrarSubmenuPaginaI()"
         >
         Productos 
         <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
         <a href="#contacto">Contacto</a>
-
     </div>
-    
-    <div *ngIf="mostrar" class="menuPaginaI">
-        <a href="#SubPaginaI-I">Categoria I</a>
-        <a href="#SubPaginaI-II">Categoria II</a>
-        <a href="#SubPaginaI-II">Categoria III</a>
-        <a href="#SubPaginaI-II">Categoria IV</a>
-        <a href="#SubPaginaI-III">Otra...</a>
 
-    </div>
-    
     <div class="conteiner1">
         <div class="buttonsLaterales">
-          <button class="fa fa-home" ></button>
-          <button class="fa fa-facebook-square" style="margin-top: 40px;" ></button>
-          <button class="fa fa-instagram" style="margin-top: 10px;"></button>
-          <button class="fa fa-envelope" style="margin-top: 10px;"></button>
-          <button class="fa fa-arrow-circle-up"></button>
-
+            <button class="fa fa-home" style=" margin-left: 15px;" ></button>
+            <button class="fa fa-facebook-square" style="margin-top: 40px; margin-left: 15px;" ></button>
+            <button class="fa fa-instagram" style="margin-top: 10px; margin-left: 15px;"></button>
+            <button class="fa fa-envelope" style="margin-top: 10px; margin-left: 15px;"></button>
+            <div (click)="mostrarPedido()">
+                <button class="fa fa-shopping-cart" style="margin-top: 20px;"> </button>
+            </div>
+            <button class="fa fa-arrow-circle-up" style=" margin-left: 15px;"></button>
         </div>
     </div>
+
+    <div *ngIf="mostrar" class="menuPaginaI">
+        <div class="nav-Secundario">
+            <nav-secundario *ngFor= "let x of apiDatos.getAll(); let i=index" 
+            [categoria]="x"
+            [categoriaIndex]="i +1 "
+            (onClicked)="elegido($event)"
+            ></nav-secundario>   
+        </div>
+    </div>
+    <div *ngIf="verPedido" class="pedido">
+        <button (click)="mostrarPedido()" style="margin-top: 5%;border: 0px;">
+            <i class="fa fa-window-close" aria-hidden="true"  ></i>
+        </button>
+        <ver-pedido ></ver-pedido>
+    </div>
+
+    <div *ngIf="productoCard" >
+        <button (click)="mostrarProductoCard()" style="margin-top: 5%; border: 0px;">
+            <i class="fa fa-window-close" aria-hidden="true"  ></i>
+        </button>
+        <cardProd-component></cardProd-component>
+    </div>
+
+    <div>
+        <list-card-component
+        (onClicked)="verPublicacion($event)"
+        ></list-card-component>
+    </div>    
     
 </div>
 
