--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -6,8 +6,9 @@ $amarillo:rgba(169, 214, 43, 0.822);
 $dark: #6d6d6b;
 $dark2: #313115;
 $gris:rgba(26, 26, 25, 0.3);
+$tamanio-icon:17px;
 
-.nav{
+.navPedidos-productos{
   height: 35%;
   position: static;
   width: 100%;
@@ -27,7 +28,6 @@ $gris:rgba(26, 26, 25, 0.3);
       text-decoration: none;
       margin-left: 7%;
       font-size: 1.2rem;
-      color: $gris;
       i{
           margin-left: 5px;
       }
@@ -36,38 +36,13 @@ $gris:rgba(26, 26, 25, 0.3);
     div.scrollmenu a:hover {
       color: $dark2  
   }
-  
-    .conteiner1{
-      width: 10%;
-      display: flex;
-      flex-direction: row;
-      background: none;
-      .buttonsLaterales{
-          position: fixed;
-          top: 230px;
-          right: 10px;
-          background-color: white;
-          border-radius: 15px ;
-          padding: 2% 2% 2% 2%;
-          display: flex;
-          flex-direction: column;
-          z-index: 999;
-        
-          .fa-envelope{
-            color: #313115;
-          }
-          .fa-arrow-circle-up{
-            position: absolute;
-            bottom: -120%;
-            color: #313115;
 
-          }
-      }
-  }
   .menuPaginaI{
-    margin-top: 1%;
-      overflow: auto;
-      white-space: nowrap;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    margin-left: 5%;
+    width: 90%;
+    background-color: white;
       a {
           font-size: 1rem;
           color: $dark2;
@@ -78,8 +53,100 @@ $gris:rgba(26, 26, 25, 0.3);
           margin-top: 2%;
       }
   }
+
+  .nav-Secundario{
+    display: flex;
+    flex-direction: row;
+    overflow: auto;
+    white-space: nowrap;
+    width: 90%;
+  }
+
+  .conteiner1{
+    width: 0%;
+    background: none;
+    .buttonsLaterales{
+        position: fixed;
+        top: 250px;
+        right: 30px;
+        background-color: white;
+        border: 1px solid $gris;
+        border-radius: 15px ;
+        display: flex;
+        flex-direction: column;
+        font-size: 20px;
+        z-index: 99;
+        padding: 10px 10px 10px 10px;
+        justify-content: space-around;
+        .fa-instagram{
+          font-size: $tamanio-icon;
+        }
+        .fa-home{
+          font-size: $tamanio-icon;
+        }
+        .fa-facebook-square{
+          font-size: $tamanio-icon;
+        }
+        .fa-envelope{
+          color: #313115;
+          font-size: $tamanio-icon;
+        }
+        .fa-arrow-circle-up{
+          position: absolute;
+          bottom: -50%;
+          color: #313115;
+          font-size: $tamanio-icon;
+        }
+        
+        .fa-shopping-cart{
+          right: 10px;
+          bottom: -110%;
+          color: $gris;
+          font-size: 30px;
+          width: 45px;
+          height: 45px;
+          padding: 10px 10px 10px 10px;
+          border: 1px solid $color-gris;
+          background-color: white;
+          cursor: pointer;
+          border-radius: 10px ;
+
+        }
+        
+    }
+ }
+
 }
 
 
+
+@media only screen  
+and (min-width : 320px)  
+and (max-width : 768px) {  
+
+  .menuPaginaI{
+    margin-top: 3%;
+    margin-left: 5%;
+    margin-bottom: 3%;
+    overflow: auto;
+    white-space: nowrap;
+    background-color: whitesmoke;
+    button{
+      background: none;
+      border: none;
+      font: uppercase;
+    }
+    }
+
+    
+  .conteiner1{
+    .buttonsLaterales{
+        .fa-shopping-cart{
+          right: 0px !important;
+        }
+    }
+  }
+
+}
 
 
