--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,20 +1,11 @@
-.conteinerHome {
-  padding: 5%;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&family=Oswald:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans&display=swap");
+* {
+  font-size: 14px;
+  font-family: "DM Sans", sans-serif, sans-serif;
 }
 
-.introduccion {
-  margin-top: 2%;
-  margin-left: 3%;
-  width: 25%;
-}
-
-.introduccion h1 span {
-  background-color: #03acac;
-  font-size: 50px;
-  line-height: normal;
-}
-
-.parte1 {
+.row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,10 +13,209 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 1%;
 }
 
-@media screen and (min-width: 300px) and (max-width: 821px) {
+.tituloPrincipal {
+  font-size: 3rem;
+}
+
+h1 {
+  font-size: 1.4rem;
+  color: #4e4e4e;
+  padding: 10px 0px 0px 0px;
+  display: block;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 1.1rem;
+  color: #505e47;
+  font-weight: bold;
+  letter-spacing: 0.1pc;
+}
+
+h3 {
+  font-size: 1.3em;
+}
+
+h4 {
+  font-size: 1em;
+}
+
+p {
+  margin: 0% !important;
+  width: 100%;
+  overflow-wrap: break-word;
+}
+
+.p-fondo {
+  font-size: 1.8rem;
+  color: #F5F5F5;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+span {
+  font-size: 1.8rem;
+  color: #F5F5F5;
+  font-weight: 500;
+}
+
+form label {
+  font-size: 0.8rem;
+}
+
+.tituloTarjeta {
+  margin-top: 5%;
+  color: #a0c2c3;
+  display: block;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.subTituloTarjeta {
+  margin: 0%;
+  color: #4e4e4e;
+  display: block;
+  font-size: 1.2rem;
+  text-transform: lowercase;
+}
+
+.pTarjeta {
+  margin: 0%;
+  width: auto;
+  display: block;
+  font-size: 0.7rem;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-overflow: clip;
+}
+
+.estiloBotonSimple {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.buttons button {
+  font-size: 0.8rem;
+  padding: 3%;
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #3f8cff;
+  cursor: pointer;
+  margin: 0px 2px 0px 1px !important;
+}
+
+.buttons button:hover {
+  background-color: #f8efef;
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 764px) {
+  .tituloTarjeta {
+    margin-top: 15%;
+    color: #a0c2c3;
+    display: block;
+    font-size: 1rem;
+    text-transform: uppercase;
+  }
+  .subTituloTarjeta {
+    margin: 0%;
+    color: #4e4e4e;
+    display: block;
+    font-size: 1.8rem;
+    text-transform: lowercase;
+  }
+  .pTarjeta {
+    margin: 0%;
+    width: auto;
+    display: block;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-overflow: clip;
+  }
+}
+
+@media only screen and (max-width: 764px) and (min-width: 300px) {
+  .tituloTarjeta {
+    margin-top: 15%;
+    color: #a0c2c3;
+    display: block;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+  .subTituloTarjeta {
+    margin: 0%;
+    color: #4e4e4e;
+    display: block;
+    font-size: 1.8rem;
+    text-transform: lowercase;
+  }
+  .pTarjeta {
+    margin: 0%;
+    width: auto;
+    display: block;
+    font-size: 1.2rem;
+    font-weight: 500;
+    letter-spacing: 1px;
+    text-overflow: clip;
+  }
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+/* iPads (portrait and landscape) ----------- */
+.conteinerHome {
+  padding: 5%;
+  margin-right: 5%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.conteinerHome .container {
+  margin-top: 5%;
+  text-align: center;
+}
+
+.introduccion {
+  text-align: center;
+  width: 100%;
+}
+
+div .parte1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.event_item {
+  text-align: left;
+  border: 1px solid gainsboro;
+}
+
+@media screen and (min-width: 300px) and (max-width: 760px) {
   .parte1 {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -65,7 +255,6 @@ body {
 .t {
   -webkit-box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
           box-shadow: 0px 0px 35px -16px rgba(0, 0, 0, 0.75);
-  font-family: 'Roboto', sans-serif;
   padding: 20px 30px;
   color: #363b41;
   display: inline-block;
@@ -77,7 +266,7 @@ body {
 
 .header_copy {
   color: #A39D9E;
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 ._plan {
@@ -95,7 +284,7 @@ body {
 }
 
 .cl_copy {
-  font-size: 20px;
+  font-size: 2rem;
   margin: 20px 0;
   display: inline-block;
 }
@@ -116,13 +305,10 @@ body {
   color: #A39D9E;
 }
 
-.ce_title {
-  font-size: 14px;
-}
-
 .event_item {
-  margin: 18px 0;
-  padding: 5px;
+  margin: 30px 0;
+  padding: 10px;
+  background-color: #eff0ee;
   cursor: pointer;
 }
 
@@ -154,7 +340,7 @@ body {
 }
 
 .dot_active {
-  background-color: #FF8494;
+  background-color: #02ee94;
 }
 
 .ei_Title {
