--- a/src/app/list-ver-pedido/ver-pedido.component.scss
+++ b/src/app/list-ver-pedido/ver-pedido.component.scss
@@ -1,5 +1,11 @@
   
   @import '../styles/tipografias.scss';
+  .ocualar{
+    display: none;
+  }
+  .mostrar{
+    display: block;
+  }
   .fa-window-close{
     position: absolute;
     top: 10px;
@@ -18,13 +24,14 @@
   .fa-archive{
     font-size: 30px;
   }
-  div .card {
+  .card {
     background: #fff;
     border-radius: 4px;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
-    width: 30%;
-    border-radius: 25px;
-    margin-left: 50%; margin-top: 4%; margin-bottom: 4%;
+    width: 70%;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    margin: 5% 10% 10% 0% !important;
   }
   .card h2 {
     width: 100%;
@@ -68,12 +75,15 @@
     display: flex;
     flex-direction: row;
   }
+  .fa-whatsapp{
+    color: rgb(112, 221, 3);
+  }
   
   @media only screen  and (min-width : 320px)  and (max-width : 765px) {
 
   div .card {
     background: #fff;
-    margin: 4% 4% 4% 10%;
+    margin: 5% 10% 10% 0% !important;
     border-radius: 25px;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
     width: 75%;
