--- a/src/app/log-in/log-in.component.scss
+++ b/src/app/log-in/log-in.component.scss
@@ -1,5 +1,6 @@
   
   @import '../styles/tipografias.scss';
+ 
   .fa-window-close{
     position: absolute;
     top: 10px;
@@ -22,9 +23,11 @@
     background: #fff;
     border-radius: 4px;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
-    width: 30%;
+    width: 35%;
     border-radius: 25px;
-    margin-left: 50%; margin-top: 4%; margin-bottom: 4%;
+    margin: auto;
+    margin-top: 10%;
+    margin-bottom: 10%;
   }
   .card h2 {
     width: 100%;
@@ -50,6 +53,11 @@
   } 
   .title-total {
     padding: 2.5em 1.5em 1.5em 1.5em;
+    text-align: center;
+  }
+  .botonesAdmin{
+    text-align: center;
+
   }
   
   button {
@@ -73,10 +81,11 @@
 
   div .card {
     background: #fff;
-    margin: 4% 4% 4% 10%;
+    margin: auto;
     border-radius: 25px;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.5);
-    width: 75%;
+    width: 65%;
+    margin-top: 15%;
   }
     .fa-user-circle{
       position: absolute;
@@ -96,6 +105,14 @@
   .title-total{
     h2 {
       font-size: 1.4rem !important;
+      text-align: center;
+
     }
   }
+
+  .botonesAdmin{
+    text-align: center;
+
+  }
+
 }
