--- a/src/app/nav-secundario/nav-secundario.css
+++ b/src/app/nav-secundario/nav-secundario.css
@@ -179,135 +179,16 @@ form label {
 
 /* Smartphones (portrait and landscape) ----------- */
 /* iPads (portrait and landscape) ----------- */
-.list-card2 {
-  background-color: white;
-}
-
-.list-card {
-  background-color: #f5f5e0;
-  width: 90%;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  margin: 2%;
-  padding-top: 5%;
-  padding-bottom: 5%;
-}
-
-.list-card .foto {
-  width: 75%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.list-card .foto .imgCard {
-  padding: 10%;
-  width: 100%;
-  border-bottom-left-radius: 40px;
-  border-top-right-radius: 40px;
-}
-
-.list-card .info-derecha {
-  width: 100%;
-  margin-left: 7%;
-}
-
-.list-card .info-derecha .list-card-botones {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  text-align: right;
-  margin-top: 7%;
-}
-
-.list-card .info-derecha .list-card-botones .botonAdd {
-  padding: 10px;
-  height: 100%;
-  border: 1px solid gainsboro;
-  margin: 0%;
-  background-color: white;
+.display-block {
   display: block;
+}
+
+.display-block a {
+  font-size: 1rem;
+  color: #313115;
   text-align: center;
+  text-decoration: none;
+  margin-left: 7%;
+  margin-top: 2%;
 }
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-  /* Styles */
-  .list-card .foto .imgCard {
-    padding: 5%;
-  }
-  .list-card .info-derecha {
-    width: 100%;
-    margin-left: 5%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .list-card .info-derecha .info {
-    margin-top: 1%;
-    width: 80%;
-  }
-  .list-card .info-derecha .list-card-botones {
-    margin-top: 7%;
-  }
-  .list-card .info-derecha .list-card-botones .botonAdd {
-    padding: 10px;
-    height: 100%;
-    border: 1px solid gainsboro;
-    margin: 0%;
-    background-color: white;
-    display: block;
-    text-align: center;
-  }
-}
-
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  /* Styles */
-  .list-card .foto {
-    width: 75%;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-  }
-  .list-card .foto .imgCard {
-    padding: 5%;
-    width: 100%;
-    border-bottom-left-radius: 40px;
-    border-top-right-radius: 40px;
-  }
-  .list-card .info-derecha {
-    width: 100%;
-    margin-left: 5%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .list-card .info-derecha .info {
-    margin-top: 1%;
-    width: 80%;
-  }
-  .list-card .info-derecha .list-card-botones {
-    margin-top: 7%;
-  }
-  .list-card .info-derecha .list-card-botones .botonAdd {
-    padding: 10px;
-    height: 100%;
-    border: 1px solid gainsboro;
-    margin: 0%;
-    background-color: white;
-    display: block;
-    text-align: center;
-  }
-}
-/*# sourceMappingURL=card-prod.component.css.map */
+/*# sourceMappingURL=nav-secundario.css.map */
