--- a/src/app/protected/protected/productos-panel/lista-prod-admin.html
+++ b/src/app/protected/protected/productos-panel/lista-prod-admin.html
@@ -1,5 +1,5 @@
   
-  <div style="margin-left: 30px;">
+  <div style="margin: auto;">
     <h1 style="margin: 30px 5px 30px 0px;">Mis productos</h1>
     <div class="row" >
       <div class="tarjetas" *ngFor="let p of publicaciones" >
@@ -15,9 +15,9 @@
               </div>
               <div class="card-head2">
                   <div class="product-detail">
-                    <p #id >Id{{p.id}}</p>
-                    <p >{{p.fecha}}</p>
-                    <p >{{p.categoria}}</p>
+                    <p #id >codigo: {{p.codigo_producto}}</p>
+                    <p >${{p.precio}}</p>
+
                   </div>
                   <div class="product-detail2">
                     <div class="buttons">
